--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
+/* body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 60px 500px;
+  background-color: #0B2434;
+  font-family: 'Karla' , sans-serif;
+}
+main{
+  height: 500px;
+  width: 500px;
+  background:#F5F5F5;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.die-div{
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 10px;
+  margin-bottom: 40px;
+}
+.die-h1{
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  height: 50px;
+  width: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+.roll-dice{
+  height: 50px;
+  width: 100px;
+  border: none;
+  color: white;
+  background: #5035FF;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 3.81277px;
+  font-family: 'Karla' , sans-serif;
+  font-size: 20px;
+}
+} */
+
+body{
+  margin: 0;
+  background-color: #0B2434;
+  padding: 100px 500px;
+  font-family: 'Karla' , sans-serif;
+}
+main{
+  height: 500px;
+  width: 500px;
+  background-color: #F5F5F5;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.die-content{
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
+  margin-bottom: 40px;
+  cursor: pointer;
+}
+.die-div{
+  background-color: white;
+  height: 50px;
+  width: 50px;
+  border: none;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+}
+.roll-dice{
+  height: 50px;
+  width: 100px;
+  border: none;
+  color: white;
+  background-color: #5035FF;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 7px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.title {
+  font-size: 40px;
+  margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.instructions {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
 }
