--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,10 @@ body{
   padding: 60px;
 }
 main{
-  height: 380px;
-  width: 380px;
+  height: 22rem;
+  width: 22rem;
   background-color: #F5F5F5;
-  border-radius: 15px;
+  border-radius: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,24 +19,24 @@ main{
 .die-content{
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
-  gap: 20px;
-  margin-bottom: 40px;
+  gap: 1rem;
+  margin-bottom: 2rem;
   cursor: pointer;
 }
 .die-div{
   background-color: white;
-  height: 50px;
-  width: 50px;
+  height: 3rem;
+  width: 3rem;
   border: none;
-  border-radius: 10px;
+  border-radius: 0.7rem;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 }
 .roll-dice{
-  height: 50px;
-  width: 100px;
+  height: 3rem;
+  width: 6rem;
   border: none;
   color: white;
   background-color: #5035FF;
@@ -46,7 +46,7 @@ main{
   cursor: pointer;
 }
 .title {
-  font-size: 40px;
+  font-size: 2.5rem;
   margin: 0;
 }
 
@@ -57,5 +57,5 @@ main{
   text-align: center;
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
 }
